--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.application.name=app-backend-educatoon
-# Configuraci\u00f3n de la Base de Datos H2 (en memoria)
-spring.datasource.url=jdbc:h2:mem:educatoon_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
 
-# Configuraci\u00f3n de JPA (Hibernate)
-spring.jpa.hibernate.ddl-auto=update
+spring.config.import=optional:file:.env[.properties]
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+jwt.secret=${JWT_SECRET}
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
-# Permite el acceso a la consola de H2
-spring.h2.console.enabled=true
