--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,8 @@ jwt.secret=${JWT_SECRET}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Ejemplo de configuraci\u00f3n de la ruta de subida de archivos
+app.upload.materiales-dir=C:/uploads/educatoon/materiales
